--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            Site Title
-description:      Describe your website here.
+title:            Giftly
+description:      Give gifts people will actually use. 
 logo:             site-logo.png
 disqus_shortname: 
 search:           true
