--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,15 @@ links:
     url: http://mademistakes.com
     external: true
 
+# Services Logo Directory
+
+gallerytag:
+    dir: images/services
+    url: /images/services
+    thumb_width: 150
+    thumb_height: 150
+    columns: 4
+
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
 future:      true
